// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`decode / encode UEvents  MdRaid 1`] = `
Object {
  "biosBoot": false,
  "devname": "/dev/md0",
  "devpath": "/devices/virtual/block/md0",
  "devtype": "disk",
  "dmLvName": null,
  "dmMultipathDevpath": null,
  "dmName": null,
  "dmSlaveMMs": Array [],
  "dmVgName": null,
  "dmVgSize": null,
  "fsType": null,
  "fsUsage": null,
  "fsUuid": null,
  "isMpath": false,
  "lvUuid": null,
  "major": "9",
  "mdDevs": Array [
    "/dev/sda",
    "/dev/sdd",
  ],
  "mdUUID": "685b40ee:f2bc2028:f056f6d2:e292c910",
  "minor": "0",
  "model": null,
  "parent": null,
  "partEntryNumber": null,
  "paths": Array [
    "/dev/disk/by-id/md-name-lotus-32vm6:0",
    "/dev/disk/by-id/md-uuid-685b40ee:f2bc2028:f056f6d2:e292c910",
    "/dev/md0",
  ],
  "readOnly": false,
  "scsi80": null,
  "scsi83": null,
  "serial": null,
  "size": "21458059264",
  "vendor": null,
  "vgUuid": null,
}
`;

exports[`decode / encode UEvents  MdRaid 2`] = `
"{
  \\"/devices/virtual/block/md0\\": {
    \\"major\\": \\"9\\",
    \\"minor\\": \\"0\\",
    \\"paths\\": [
      \\"/dev/disk/by-id/md-name-lotus-32vm6:0\\",
      \\"/dev/disk/by-id/md-uuid-685b40ee:f2bc2028:f056f6d2:e292c910\\",
      \\"/dev/md0\\"
    ],
    \\"devName\\": \\"/dev/md0\\",
    \\"devPath\\": \\"/devices/virtual/block/md0\\",
    \\"parent\\": null,
    \\"devType\\": \\"disk\\",
    \\"idVendor\\": null,
    \\"idModel\\": null,
    \\"idSerial\\": null,
    \\"idFsType\\": null,
    \\"idFsUsage\\": null,
    \\"idFsUuid\\": null,
    \\"idPartEntryNumber\\": null,
    \\"size\\": \\"21458059264\\",
    \\"scsi80\\": null,
    \\"scsi83\\": null,
    \\"isReadOnly\\": false,
    \\"isBiosBoot\\": false,
    \\"isMpath\\": false,
    \\"dmSlaveMms\\": [],
    \\"dmVgSize\\": null,
    \\"mdDevices\\": [
      \\"/dev/sda\\",
      \\"/dev/sdd\\"
    ],
    \\"dmMultipathDevicePath\\": null,
    \\"dmName\\": null,
    \\"dmLvName\\": null,
    \\"lvUuid\\": null,
    \\"dmVgName\\": null,
    \\"vgUuid\\": null,
    \\"mdUuid\\": \\"685b40ee:f2bc2028:f056f6d2:e292c910\\"
  }
}"
`;

exports[`decode / encode UEvents  add 1`] = `
Object {
  "biosBoot": false,
  "devname": "/dev/sdb1",
  "devpath": "/devices/pci0000:00/0000:00:01.1/ata1/host1/target1:0:0/1:0:0:0/block/sdb/sdb1",
  "devtype": "partition",
  "dmLvName": "swap",
  "dmMultipathDevpath": true,
  "dmName": "centos-swap",
  "dmSlaveMMs": Array [],
  "dmVgName": "centos",
  "dmVgSize": null,
  "fsType": "LVM2_member",
  "fsUsage": "filesystem",
  "fsUuid": "wCBeLJ-3ors-t60q-f4sB-2Mhc-eLvN-DZ9s9v",
  "isMpath": false,
  "lvUuid": "3IU1hvimWWlvmd5xQddtMIqRtjwOuKTz",
  "major": "8",
  "mdDevs": Array [],
  "mdUUID": null,
  "minor": "17",
  "model": "VBOX_HARDDISK",
  "parent": null,
  "partEntryNumber": 1,
  "paths": Array [
    "/dev/disk/by-id/ata-VBOX_HARDDISK_VB304a0a0f-15e93f07-part1",
    "/dev/disk/by-path/pci-0000:00:01.1-ata-1.0-part1",
    "/dev/sdb1",
  ],
  "readOnly": true,
  "scsi80": "80",
  "scsi83": "83",
  "serial": "VBOX_HARDDISK_VB304a0a0f-15e93f07",
  "size": "41873833984",
  "vendor": null,
  "vgUuid": "pV8TgNKMJVNrolJgMhVwg4CAeFFAIMC8",
}
`;

exports[`decode / encode UEvents  add 2`] = `
"{
  \\"/devices/pci0000:00/0000:00:01.1/ata1/host1/target1:0:0/1:0:0:0/block/sdb/sdb1\\": {
    \\"major\\": \\"8\\",
    \\"minor\\": \\"17\\",
    \\"paths\\": [
      \\"/dev/disk/by-id/ata-VBOX_HARDDISK_VB304a0a0f-15e93f07-part1\\",
      \\"/dev/disk/by-path/pci-0000:00:01.1-ata-1.0-part1\\",
      \\"/dev/sdb1\\"
    ],
    \\"devName\\": \\"/dev/sdb1\\",
    \\"devPath\\": \\"/devices/pci0000:00/0000:00:01.1/ata1/host1/target1:0:0/1:0:0:0/block/sdb/sdb1\\",
    \\"parent\\": null,
    \\"devType\\": \\"partition\\",
    \\"idVendor\\": null,
    \\"idModel\\": \\"VBOX_HARDDISK\\",
    \\"idSerial\\": \\"VBOX_HARDDISK_VB304a0a0f-15e93f07\\",
    \\"idFsType\\": \\"LVM2_member\\",
    \\"idFsUsage\\": \\"filesystem\\",
    \\"idFsUuid\\": \\"wCBeLJ-3ors-t60q-f4sB-2Mhc-eLvN-DZ9s9v\\",
    \\"idPartEntryNumber\\": 1,
    \\"size\\": \\"41873833984\\",
    \\"scsi80\\": \\"80\\",
    \\"scsi83\\": \\"83\\",
    \\"isReadOnly\\": true,
    \\"isBiosBoot\\": false,
    \\"isMpath\\": false,
    \\"dmSlaveMms\\": [],
    \\"dmVgSize\\": null,
    \\"mdDevices\\": [],
    \\"dmMultipathDevicePath\\": true,
    \\"dmName\\": \\"centos-swap\\",
    \\"dmLvName\\": \\"swap\\",
    \\"lvUuid\\": \\"3IU1hvimWWlvmd5xQddtMIqRtjwOuKTz\\",
    \\"dmVgName\\": \\"centos\\",
    \\"vgUuid\\": \\"pV8TgNKMJVNrolJgMhVwg4CAeFFAIMC8\\",
    \\"mdUuid\\": null
  }
}"
`;

exports[`decode / encode UEvents  add DM 1`] = `
Object {
  "biosBoot": false,
  "devname": "/dev/sdb1",
  "devpath": "/devices/pci0000:00/0000:00:01.1/ata1/host1/target1:0:0/1:0:0:0/block/sdb/sdb1",
  "devtype": "disk",
  "dmLvName": "swap",
  "dmMultipathDevpath": true,
  "dmName": "centos-swap",
  "dmSlaveMMs": Array [
    "8:16",
    "8:32",
  ],
  "dmVgName": "centos",
  "dmVgSize": "21466447872",
  "fsType": "LVM2_member",
  "fsUsage": "filesystem",
  "fsUuid": "afa3e429-64c4-4996-a19a-a62ac1e4d265",
  "isMpath": false,
  "lvUuid": "EDy4qFTQ3cgVnmyhy1zB2cJx2l5yE26D",
  "major": "8",
  "mdDevs": Array [],
  "mdUUID": null,
  "minor": "17",
  "model": "VBOX_HARDDISK",
  "parent": null,
  "partEntryNumber": 1,
  "paths": Array [
    "/dev/disk/by-id/ata-VBOX_HARDDISK_VB304a0a0f-15e93f07-part1",
    "/dev/disk/by-path/pci-0000:00:01.1-ata-1.0-part1",
    "/dev/sdb1",
  ],
  "readOnly": true,
  "scsi80": "80",
  "scsi83": "83",
  "serial": "VBOX_HARDDISK_VB304a0a0f-15e93f07",
  "size": "41873833984",
  "vendor": null,
  "vgUuid": "KHoa9g8GBwQJMHjQtL77pGj6b9R1YWrl",
}
`;

exports[`decode / encode UEvents  add DM 2`] = `
"{
  \\"/devices/pci0000:00/0000:00:01.1/ata1/host1/target1:0:0/1:0:0:0/block/sdb/sdb1\\": {
    \\"major\\": \\"8\\",
    \\"minor\\": \\"17\\",
    \\"paths\\": [
      \\"/dev/disk/by-id/ata-VBOX_HARDDISK_VB304a0a0f-15e93f07-part1\\",
      \\"/dev/disk/by-path/pci-0000:00:01.1-ata-1.0-part1\\",
      \\"/dev/sdb1\\"
    ],
    \\"devName\\": \\"/dev/sdb1\\",
    \\"devPath\\": \\"/devices/pci0000:00/0000:00:01.1/ata1/host1/target1:0:0/1:0:0:0/block/sdb/sdb1\\",
    \\"parent\\": null,
    \\"devType\\": \\"disk\\",
    \\"idVendor\\": null,
    \\"idModel\\": \\"VBOX_HARDDISK\\",
    \\"idSerial\\": \\"VBOX_HARDDISK_VB304a0a0f-15e93f07\\",
    \\"idFsType\\": \\"LVM2_member\\",
    \\"idFsUsage\\": \\"filesystem\\",
    \\"idFsUuid\\": \\"afa3e429-64c4-4996-a19a-a62ac1e4d265\\",
    \\"idPartEntryNumber\\": 1,
    \\"size\\": \\"41873833984\\",
    \\"scsi80\\": \\"80\\",
    \\"scsi83\\": \\"83\\",
    \\"isReadOnly\\": true,
    \\"isBiosBoot\\": false,
    \\"isMpath\\": false,
    \\"dmSlaveMms\\": [
      \\"8:16\\",
      \\"8:32\\"
    ],
    \\"dmVgSize\\": \\"21466447872\\",
    \\"mdDevices\\": [],
    \\"dmMultipathDevicePath\\": true,
    \\"dmName\\": \\"centos-swap\\",
    \\"dmLvName\\": \\"swap\\",
    \\"lvUuid\\": \\"EDy4qFTQ3cgVnmyhy1zB2cJx2l5yE26D\\",
    \\"dmVgName\\": \\"centos\\",
    \\"vgUuid\\": \\"KHoa9g8GBwQJMHjQtL77pGj6b9R1YWrl\\",
    \\"mdUuid\\": null
  }
}"
`;

exports[`decode / encode UEvents  remove 1`] = `
Object {
  "biosBoot": false,
  "devname": "/dev/sdb1",
  "devpath": "/devices/pci0000:00/0000:00:01.1/ata1/host1/target1:0:0/1:0:0:0/block/sdb/sdb1",
  "devtype": "partition",
  "dmLvName": null,
  "dmMultipathDevpath": null,
  "dmName": null,
  "dmSlaveMMs": Array [],
  "dmVgName": null,
  "dmVgSize": null,
  "fsType": null,
  "fsUsage": null,
  "fsUuid": null,
  "isMpath": false,
  "lvUuid": null,
  "major": "8",
  "mdDevs": Array [],
  "mdUUID": null,
  "minor": "17",
  "model": "VBOX_HARDDISK",
  "parent": null,
  "partEntryNumber": 1,
  "paths": Array [
    "/dev/disk/by-id/ata-VBOX_HARDDISK_VB304a0a0f-15e93f07-part1",
    "/dev/disk/by-path/pci-0000:00:01.1-ata-1.0-part1",
    "/dev/sdb1",
  ],
  "readOnly": null,
  "scsi80": null,
  "scsi83": null,
  "serial": "VBOX_HARDDISK_VB304a0a0f-15e93f07",
  "size": null,
  "vendor": null,
  "vgUuid": null,
}
`;

exports[`decode / encode UEvents  remove 2`] = `
"{
  \\"/devices/pci0000:00/0000:00:01.1/ata1/host1/target1:0:0/1:0:0:0/block/sdb/sdb1\\": {
    \\"major\\": \\"8\\",
    \\"minor\\": \\"17\\",
    \\"paths\\": [
      \\"/dev/disk/by-id/ata-VBOX_HARDDISK_VB304a0a0f-15e93f07-part1\\",
      \\"/dev/disk/by-path/pci-0000:00:01.1-ata-1.0-part1\\",
      \\"/dev/sdb1\\"
    ],
    \\"devName\\": \\"/dev/sdb1\\",
    \\"devPath\\": \\"/devices/pci0000:00/0000:00:01.1/ata1/host1/target1:0:0/1:0:0:0/block/sdb/sdb1\\",
    \\"parent\\": null,
    \\"devType\\": \\"partition\\",
    \\"idVendor\\": null,
    \\"idModel\\": \\"VBOX_HARDDISK\\",
    \\"idSerial\\": \\"VBOX_HARDDISK_VB304a0a0f-15e93f07\\",
    \\"idFsType\\": null,
    \\"idFsUsage\\": null,
    \\"idFsUuid\\": null,
    \\"idPartEntryNumber\\": 1,
    \\"size\\": null,
    \\"scsi80\\": null,
    \\"scsi83\\": null,
    \\"isReadOnly\\": null,
    \\"isBiosBoot\\": false,
    \\"isMpath\\": false,
    \\"dmSlaveMms\\": [],
    \\"dmVgSize\\": null,
    \\"mdDevices\\": [],
    \\"dmMultipathDevicePath\\": null,
    \\"dmName\\": null,
    \\"dmLvName\\": null,
    \\"lvUuid\\": null,
    \\"dmVgName\\": null,
    \\"vgUuid\\": null,
    \\"mdUuid\\": null
  }
}"
`;

exports[`decode encoded decode / encode UEvents  MdRaid 2 1`] = `
"{
  \\"/devices/virtual/block/md0\\": {
    \\"major\\": \\"9\\",
    \\"minor\\": \\"0\\",
    \\"paths\\": [
      \\"/dev/disk/by-id/md-name-lotus-32vm6:0\\",
      \\"/dev/disk/by-id/md-uuid-685b40ee:f2bc2028:f056f6d2:e292c910\\",
      \\"/dev/md0\\"
    ],
    \\"devName\\": \\"/dev/md0\\",
    \\"devPath\\": \\"/devices/virtual/block/md0\\",
    \\"parent\\": null,
    \\"devType\\": \\"disk\\",
    \\"idVendor\\": null,
    \\"idModel\\": null,
    \\"idSerial\\": null,
    \\"idFsType\\": null,
    \\"idFsUsage\\": null,
    \\"idFsUuid\\": null,
    \\"idPartEntryNumber\\": null,
    \\"size\\": \\"21458059264\\",
    \\"scsi80\\": null,
    \\"scsi83\\": null,
    \\"isReadOnly\\": false,
    \\"isBiosBoot\\": false,
    \\"isMpath\\": false,
    \\"dmSlaveMms\\": [],
    \\"dmVgSize\\": null,
    \\"mdDevices\\": [
      \\"/dev/sda\\",
      \\"/dev/sdd\\"
    ],
    \\"dmMultipathDevicePath\\": null,
    \\"dmName\\": null,
    \\"dmLvName\\": null,
    \\"lvUuid\\": null,
    \\"dmVgName\\": null,
    \\"vgUuid\\": null,
    \\"mdUuid\\": \\"685b40ee:f2bc2028:f056f6d2:e292c910\\"
  }
}"
`;

exports[`decode encoded decode / encode UEvents  add 2 1`] = `
"{
  \\"/devices/pci0000:00/0000:00:01.1/ata1/host1/target1:0:0/1:0:0:0/block/sdb/sdb1\\": {
    \\"major\\": \\"8\\",
    \\"minor\\": \\"17\\",
    \\"paths\\": [
      \\"/dev/disk/by-id/ata-VBOX_HARDDISK_VB304a0a0f-15e93f07-part1\\",
      \\"/dev/disk/by-path/pci-0000:00:01.1-ata-1.0-part1\\",
      \\"/dev/sdb1\\"
    ],
    \\"devName\\": \\"/dev/sdb1\\",
    \\"devPath\\": \\"/devices/pci0000:00/0000:00:01.1/ata1/host1/target1:0:0/1:0:0:0/block/sdb/sdb1\\",
    \\"parent\\": null,
    \\"devType\\": \\"partition\\",
    \\"idVendor\\": null,
    \\"idModel\\": \\"VBOX_HARDDISK\\",
    \\"idSerial\\": \\"VBOX_HARDDISK_VB304a0a0f-15e93f07\\",
    \\"idFsType\\": \\"LVM2_member\\",
    \\"idFsUsage\\": \\"filesystem\\",
    \\"idFsUuid\\": \\"wCBeLJ-3ors-t60q-f4sB-2Mhc-eLvN-DZ9s9v\\",
    \\"idPartEntryNumber\\": 1,
    \\"size\\": \\"41873833984\\",
    \\"scsi80\\": \\"80\\",
    \\"scsi83\\": \\"83\\",
    \\"isReadOnly\\": true,
    \\"isBiosBoot\\": false,
    \\"isMpath\\": false,
    \\"dmSlaveMms\\": [],
    \\"dmVgSize\\": null,
    \\"mdDevices\\": [],
    \\"dmMultipathDevicePath\\": true,
    \\"dmName\\": \\"centos-swap\\",
    \\"dmLvName\\": \\"swap\\",
    \\"lvUuid\\": \\"3IU1hvimWWlvmd5xQddtMIqRtjwOuKTz\\",
    \\"dmVgName\\": \\"centos\\",
    \\"vgUuid\\": \\"pV8TgNKMJVNrolJgMhVwg4CAeFFAIMC8\\",
    \\"mdUuid\\": null
  }
}"
`;

exports[`decode encoded decode / encode UEvents  add DM 2 1`] = `
"{
  \\"/devices/pci0000:00/0000:00:01.1/ata1/host1/target1:0:0/1:0:0:0/block/sdb/sdb1\\": {
    \\"major\\": \\"8\\",
    \\"minor\\": \\"17\\",
    \\"paths\\": [
      \\"/dev/disk/by-id/ata-VBOX_HARDDISK_VB304a0a0f-15e93f07-part1\\",
      \\"/dev/disk/by-path/pci-0000:00:01.1-ata-1.0-part1\\",
      \\"/dev/sdb1\\"
    ],
    \\"devName\\": \\"/dev/sdb1\\",
    \\"devPath\\": \\"/devices/pci0000:00/0000:00:01.1/ata1/host1/target1:0:0/1:0:0:0/block/sdb/sdb1\\",
    \\"parent\\": null,
    \\"devType\\": \\"disk\\",
    \\"idVendor\\": null,
    \\"idModel\\": \\"VBOX_HARDDISK\\",
    \\"idSerial\\": \\"VBOX_HARDDISK_VB304a0a0f-15e93f07\\",
    \\"idFsType\\": \\"LVM2_member\\",
    \\"idFsUsage\\": \\"filesystem\\",
    \\"idFsUuid\\": \\"afa3e429-64c4-4996-a19a-a62ac1e4d265\\",
    \\"idPartEntryNumber\\": 1,
    \\"size\\": \\"41873833984\\",
    \\"scsi80\\": \\"80\\",
    \\"scsi83\\": \\"83\\",
    \\"isReadOnly\\": true,
    \\"isBiosBoot\\": false,
    \\"isMpath\\": false,
    \\"dmSlaveMms\\": [
      \\"8:16\\",
      \\"8:32\\"
    ],
    \\"dmVgSize\\": \\"21466447872\\",
    \\"mdDevices\\": [],
    \\"dmMultipathDevicePath\\": true,
    \\"dmName\\": \\"centos-swap\\",
    \\"dmLvName\\": \\"swap\\",
    \\"lvUuid\\": \\"EDy4qFTQ3cgVnmyhy1zB2cJx2l5yE26D\\",
    \\"dmVgName\\": \\"centos\\",
    \\"vgUuid\\": \\"KHoa9g8GBwQJMHjQtL77pGj6b9R1YWrl\\",
    \\"mdUuid\\": null
  }
}"
`;

exports[`decode encoded decode / encode UEvents  remove 2 1`] = `
"{
  \\"/devices/pci0000:00/0000:00:01.1/ata1/host1/target1:0:0/1:0:0:0/block/sdb/sdb1\\": {
    \\"major\\": \\"8\\",
    \\"minor\\": \\"17\\",
    \\"paths\\": [
      \\"/dev/disk/by-id/ata-VBOX_HARDDISK_VB304a0a0f-15e93f07-part1\\",
      \\"/dev/disk/by-path/pci-0000:00:01.1-ata-1.0-part1\\",
      \\"/dev/sdb1\\"
    ],
    \\"devName\\": \\"/dev/sdb1\\",
    \\"devPath\\": \\"/devices/pci0000:00/0000:00:01.1/ata1/host1/target1:0:0/1:0:0:0/block/sdb/sdb1\\",
    \\"parent\\": null,
    \\"devType\\": \\"partition\\",
    \\"idVendor\\": null,
    \\"idModel\\": \\"VBOX_HARDDISK\\",
    \\"idSerial\\": \\"VBOX_HARDDISK_VB304a0a0f-15e93f07\\",
    \\"idFsType\\": null,
    \\"idFsUsage\\": null,
    \\"idFsUuid\\": null,
    \\"idPartEntryNumber\\": 1,
    \\"size\\": null,
    \\"scsi80\\": null,
    \\"scsi83\\": null,
    \\"isReadOnly\\": null,
    \\"isBiosBoot\\": false,
    \\"isMpath\\": false,
    \\"dmSlaveMms\\": [],
    \\"dmVgSize\\": null,
    \\"mdDevices\\": [],
    \\"dmMultipathDevicePath\\": null,
    \\"dmName\\": null,
    \\"dmLvName\\": null,
    \\"lvUuid\\": null,
    \\"dmVgName\\": null,
    \\"vgUuid\\": null,
    \\"mdUuid\\": null
  }
}"
`;
